fix blockquote font color, block title spacing

--- a/stylesheets/_settings.scss
+++ b/stylesheets/_settings.scss
@@ -116,6 +116,7 @@ $header-bottom-margin: .5em;
 // These control how subheaders are styled.
 // $subheader-line-height: 1.4;
 // $subheader-font-color: lighten($header-font-color, 30%);
+$subheader-font-color: darken($header-font-color, 10%);
 // $subheader-font-weight: 300;
 // $subheader-top-margin: .2em;
 // $subheader-bottom-margin: .5em;
